bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(hour<=7 | hour>= 20) {
    ^